Development Portal (2019-01-10 shi)
==============================
Update print-friendly css for new graphs
Update all themes css with new graphs and iati-identifier section
Fix padding for new graphs in SAVi


Development Portal (2019-01-08 shi)
==============================
Display sector codes in graph
Add new recipient-country graph
Update new graphs css, remove old graph code
Show withdrawn status in sector graphs for SAVi
Add whitespace no-wrap for overflowing value in new graphs


Development Portal (2019-01-07 shi)
==============================
Start on new graphs to replace sector and countries in SAVi


Development Portal (2019-01-06 shi)
==============================
Add transaction-type count and hide buttons
Update colours for chart lines of transaction-type
Add blank tags for missing columns in planned-disbursement
Update toggle buttons css in SAVi
Update all themes and print-friendly
Move transaction-type code 11 before code 1


Development Portal (2019-01-05 shi)
==============================
Fix transaction count for new sections
Add transaction table headers for new sections
Hide transaction-type in tables for SAVi
Update css for planned-disbursement and budget tables
Update all themes and print-friendly css
Sticky headers tryout
Chartists in SAVi tryout
Update css for chartists
Update padding (n+2) participating-org 
Change font-size for result dates in SAVi


Development Portal (2019-01-04 shi)
==============================
Hide policy-marker in refine search
Display budget type for planned-disbursement
Update planned-disbursement table in SAVi
Display organisation type in transaction
Update all themes with organisation type
Update print-friendly css
Update font-size for tables in SAVi
Layout work on #506


Development Portal (2019-01-03 shi)
==============================
Fix humanitarian tag for Chrome
Add withdrawn codes to import
Display withdrawn in search dropdown
Update all css
Add humanitarian-scope to import