@@ -360,15 +360,13 @@ sector > *				{display:none;}
 span.span_sector:before	{content:"Sector"; font-size:20px; color:#FFF; background-color:rgba(17,46,105,0.9); display:block; padding:20px 40px; width:900px; margin-left:-10px;}
 span.span_sector > *	{display:none;}
 span.span_sector		{z-index:1;}
+span.span_sector:after	{content:""; display:block; padding-bottom:40px; background-color:#FFF;}
 span.span_sector sector[vocabulary="DAC"],
 span.span_sector sector[vocabulary="1"],
 span.span_sector sector[vocabulary="2"]		{display:block; padding:0 40px;}
 span.span_sector sector[vocabulary="2"]:nth-of-type(1):before	{content:"SECTOR GROUP"; font-size:14px; color:#ccc; width:240px; display:block; padding-bottom:5px;}
 span.span_sector sector	{background-color:rgba(255,255,255,1); position:relative; z-index:-1;}
 span.span_sector sector:nth-of-type(1)		{padding-top:40px;}
-span.span_sector sector[vocabulary="DAC"]:last-of-type,
-span.span_sector sector[vocabulary="1"]:last-of-type,
-span.span_sector sector[vocabulary="2"]:last-of-type,
 span.span_sector sector:last-of-type		{padding-bottom:40px;}
 span.span_sector sector span				{color:#444; font-size:14px; line-height:18px; display:inline-block; text-align:right; vertical-align:middle;}
 span.span_sector sector span.sec_code		{width:200px; min-height:25px; padding:10px 20px; border-right:1px solid #999;}
