@@ -3,6 +3,8 @@ Development Portal (2019-01-10 shi)
 Update print-friendly css for new graphs
 Update all themes css with new graphs and iati-identifier section
 Fix padding for new graphs in SAVi
+Fix last of type padding for sector graphs with dac vocab
+Update hide toggles for transaction
 
 
 Development Portal (2019-01-08 shi)
